--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hamburger-react": "^2.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
+    "react-burger-menu": "^2.9.2",
     "react-dom": "^16.7.0",
-    "react-html-parser": "^2.0.2"
+    "react-html-parser": "^2.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
