--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "build": "webpack --mode production"
+
   },
   "husky": {
     "hooks": {
