--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
