--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "lint": "eslint src/",
@@ -29,6 +28,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.0.1",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "shortid": "^2.2.16"
   },
